objects/Underwriting_Record__c.object
<CustomObject>
    <fields>
        <fullName>AIM_Current_Expense__c</fullName>
        <label>AIM Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AIM_Current_Op_Gain__c</fullName>
        <formula>AIM_Current_Revenue__c - AIM_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AIM Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AIM_Current_Revenue__c</fullName>
        <label>AIM Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AIM_Sold_Expense__c</fullName>
        <label>AIM Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AIM_Sold_Op_Gain__c</fullName>
        <formula>AIM_Sold_Revenue__c - AIM_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AIM Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AIM_Sold_Revenue__c</fullName>
        <label>AIM Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ANA_Home_Contribution_Margin__c</fullName>
        <label>ANA Home Contribution Margin</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANA_Total_Contribution_Margin__c</fullName>
        <label>ANA Total Contribution Margin</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASLCommissionPercent__c</fullName>
        <label>ASL Commission %</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASLCommission__c</fullName>
        <label>ASL Commission</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASL_Current_Aggregate_Corridor__c</fullName>
        <label>ASL Current Aggregate Corridor %</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASL_Current_Incurred_Months__c</fullName>
        <label>ASL Current Incurred Months</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASL_Current_Paid_Months__c</fullName>
        <label>ASL Current Paid Months</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASL_Current_Rate_PCPM__c</fullName>
        <label>ASL Current Rate PCPM</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASL_Final_Rate_Action__c</fullName>
        <formula>IF( ASL_Proposed_Rate_PCPM__c  = 0, 0,  (ASL_Proposed_Rate_PCPM__c /  ASL_Current_Rate_PCPM__c  )  - 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASL Final Rate Action %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASL_Proposed_Aggregate_Corridor__c</fullName>
        <label>ASL Proposed Aggregate Corridor %</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASL_Proposed_Incurred_Months__c</fullName>
        <label>ASL Proposed Incurred Months</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASL_Proposed_Paid_Months__c</fullName>
        <label>ASL Proposed Paid Months</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASL_Proposed_Rate_PCPM__c</fullName>
        <label>ASL Proposed Rate PCPM</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASL_Reinsurer__c</fullName>
        <label>ASL Reinsurer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem with MRM</fullName>
                </value>
                <value>
                    <fullName>Anthem with BCS</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Gerber Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASL_Sold__c</fullName>
        <label>ASL Sold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASO_Fee_Base_Admin_Current_Expense__c</fullName>
        <label>ASO Fee- Base Admin Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASO_Fee_Base_Admin_Current_Op_Gain__c</fullName>
        <formula>ASO_Fee_Base_Admin_Current_Revenue__c - ASO_Fee_Base_Admin_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASO Fee- Base Admin Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASO_Fee_Base_Admin_Current_Revenue__c</fullName>
        <label>ASO Fee- Base Admin Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASO_Fee_Profit__c</fullName>
        <label>ASO Fee Profit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Account Executive</inlineHelpText>
        <label>Account Executive Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Underwriting_Records_LG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Underwriting Records</relationshipLabel>
        <relationshipName>Underwriting_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss_PEPM_Current__c</fullName>
        <label>Aggregate Stop Loss PEPM Current</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss_PEPM_Quoted__c</fullName>
        <label>Aggregate Stop Loss PEPM Quoted</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss_PEPM_Sold__c</fullName>
        <label>Aggregate Stop Loss PEPM Sold</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss_PEPM_Target__c</fullName>
        <label>Aggregate Stop Loss PEPM Target</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss__c</fullName>
        <label>Aggregate Stop Loss</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregating_Specific_Level_Sold__c</fullName>
        <label>Aggregating Specific Level Sold</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowances_Credits_Current_Expense__c</fullName>
        <label>Allowances/Credits Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowances_Credits_Current_Op_Gain__c</fullName>
        <formula>Allowances_Credits_Current_Revenue__c - Allowances_Credits_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowances/Credits Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowances_Credits_Current_Revenue__c</fullName>
        <label>Allowances/Credits Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowances_Credits_Sold_Expense__c</fullName>
        <label>Allowances/Credits Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowances_Credits_Sold_Op_Gain__c</fullName>
        <formula>Allowances_Credits_Sold_Revenue__c - Allowances_Credits_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowances/Credits Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowances_Credits_Sold_Revenue__c</fullName>
        <label>Allowances/Credits Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>Text(Account__r.Anthem_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Health_Guide_Current_Expense__c</fullName>
        <label>Anthem Health Guide Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anthem_Health_Guide_Current_Op_Gain__c</fullName>
        <formula>Anthem_Health_Guide_Current_Revenue__c - Anthem_Health_Guide_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Health Guide Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anthem_Health_Guide_Current_Revenue__c</fullName>
        <label>Anthem Health Guide Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anthem_Health_Guide_Sold_Expense__c</fullName>
        <label>Anthem Health Guide Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anthem_Health_Guide_Sold_Op_Gain__c</fullName>
        <formula>Anthem_Health_Guide_Sold_Revenue__c - Anthem_Health_Guide_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Health Guide Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anthem_Health_Guide_Sold_Revenue__c</fullName>
        <label>Anthem Health Guide Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anthem_Health_Marketplace_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anthem Health Marketplace Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anthem_Rx__c</fullName>
        <label>Anthem Rx</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_H_EAP_Current_Expense__c</fullName>
        <label>B/H EAP Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_H_EAP_Current_Op_Gain__c</fullName>
        <formula>B_H_EAP_Current_Revenue__c - B_H_EAP_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B/H EAP Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_H_EAP_Current_Revenue__c</fullName>
        <label>B/H EAP Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_H_EAP_Sold_Expense__c</fullName>
        <label>B/H EAP Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_H_EAP_Sold_Op_Gain__c</fullName>
        <formula>B_H_EAP_Sold_Revenue__c - B_H_EAP_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B/H EAP Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_H_EAP_Sold_Revenue__c</fullName>
        <label>B/H EAP Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_ASO_Fee_PEPM_Break_even__c</fullName>
        <label>Base ASO Fee PEPM Break-even</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_ASO_Fee_PEPM_Current__c</fullName>
        <label>Base ASO Fee PEPM Current</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_ASO_Fee_PEPM_Quoted__c</fullName>
        <label>Base ASO Fee PEPM Quoted</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_ASO_Fee_PEPM_Scale__c</fullName>
        <label>Base ASO Fee PEPM Scale</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_ASO_Fee_PEPM_Sold__c</fullName>
        <label>Base ASO Fee PEPM Sold</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_ASO_Fee_Renewal_Guarantee_Yr_1__c</fullName>
        <description>The first year base ASO fee renewal is guaranteed to be no greater than xx%.</description>
        <inlineHelpText>The first year base ASO fee renewal is guaranteed to be no greater than xx%.</inlineHelpText>
        <label>Base ASO Fee Renewal Guarantee % Yr 1</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_ASO_Fee_Renewal_Guarantee_Yr_2__c</fullName>
        <description>The second year base ASO fee renewal is guaranteed to be no greater than xx%.</description>
        <inlineHelpText>The second year base ASO fee renewal is guaranteed to be no greater than xx%.</inlineHelpText>
        <label>Base ASO Fee Renewal Guarantee % Yr 2</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_Fee_Sold_Expense__c</fullName>
        <label>ASO Fee- Base Admin Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Fee_Sold_Op_Gain__c</fullName>
        <formula>Base_Fee_Sold_Revenue__c - Base_Fee_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASO Fee- Base Admin Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Fee_Sold_Revenue__c</fullName>
        <label>ASO Fee- Base Admin Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_360_Fee__c</fullName>
        <label>Billed 360 Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billed_CHS_Fee__c</fullName>
        <inlineHelpText>Enter total non-Core CHS fees billed separately from Admin fee</inlineHelpText>
        <label>Billed CHS Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Break_even_Annual_Revenue__c</fullName>
        <label>Break-even Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brokerage_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the name of the Brokerage</inlineHelpText>
        <label>Brokerage Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Underwriting Records (Brokerage Name)</relationshipLabel>
        <relationshipName>Underwriting_Records_LG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMU_Current_Expense__c</fullName>
        <label>CCMU Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCMU_Current_Op_Gain__c</fullName>
        <formula>CCMU_Current_Revenue__c - CCMU_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCMU Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCMU_Current_Revenue__c</fullName>
        <label>CCMU Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCMU_Sold_Expense__c</fullName>
        <label>CCMU Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCMU_Sold_Op_Gain__c</fullName>
        <formula>CCMU_Sold_Revenue__c - CCMU_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCMU Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCMU_Sold_Revenue__c</fullName>
        <label>CCMU Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CHS_Profit__c</fullName>
        <label>CHS Profit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSBD_Contribution_Margin__c</fullName>
        <description>Commercial &amp; Specialty Business Division</description>
        <inlineHelpText>Commercial &amp; Specialty Business Division</inlineHelpText>
        <label>CSBD Contribution Margin</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Amount_PMPM__c</fullName>
        <label>Cap Amount PMPM</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Care_Management_Fees_at_Risk__c</fullName>
        <label>% Care Management Fees at Risk</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Claim_Savings_AI_Quoted__c</fullName>
        <label>Claim Savings AI Quoted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Savings_AI_Sold__c</fullName>
        <label>Claim Savings AI Sold</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classic_Program_Bundle_Current_Expense__c</fullName>
        <label>Classic Program Bundle Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Classic_Program_Bundle_Current_Op_Gain__c</fullName>
        <formula>Classic_Program_Bundle_Current_Revenue__c - Classic_Program_Bundle_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classic Program Bundle Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Classic_Program_Bundle_Current_Revenue__c</fullName>
        <label>Classic Program Bundle Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Classic_Program_Bundle_Sold_Expense__c</fullName>
        <label>Classic Program Bundle Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Classic_Program_Bundle_Sold_Op_Gain__c</fullName>
        <formula>Classic_Program_Bundle_Sold_Revenue__c - Classic_Program_Bundle_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classic Program Bundle Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Classic_Program_Bundle_Sold_Revenue__c</fullName>
        <label>Classic Program Bundle Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Current_Expense__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Commission Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Current_Op_Gain__c</fullName>
        <formula>Commission_Current_Expense__c - 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Sold_Expense__c</fullName>
        <label>Commission Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Sold_Op_Gain__c</fullName>
        <formula>Commission_Sold_Expense__c - 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConditionCare_Current_Expense__c</fullName>
        <label>ConditionCare Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConditionCare_Current_Op_Gain__c</fullName>
        <formula>ConditionCare_Current_Revenue__c  - ConditionCare_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConditionCare Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConditionCare_Current_Revenue__c</fullName>
        <label>ConditionCare Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConditionCare_Sold_Expense__c</fullName>
        <label>ConditionCare Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConditionCare_Sold_Op_Gain__c</fullName>
        <formula>ConditionCare_Sold_Revenue__c -  ConditionCare_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConditionCare Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConditionCare_Sold_Revenue__c</fullName>
        <label>ConditionCare Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <inlineHelpText>Should match the retention model</inlineHelpText>
        <label>Contracts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Revenue__c</fullName>
        <description>Local UW - NY</description>
        <label>Current Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Carrier__c</fullName>
        <label>Current Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Assurant</fullName>
                </value>
                <value>
                    <fullName>Aultcare</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Healthspan</fullName>
                </value>
                <value>
                    <fullName>Healthspan of the Upper Valley</fullName>
                </value>
                <value>
                    <fullName>Humana</fullName>
                </value>
                <value>
                    <fullName>MMO</fullName>
                </value>
                <value>
                    <fullName>Paramount</fullName>
                </value>
                <value>
                    <fullName>Starmark</fullName>
                </value>
                <value>
                    <fullName>Summacare</fullName>
                </value>
                <value>
                    <fullName>UHC</fullName>
                </value>
                <value>
                    <fullName>Other BCBS</fullName>
                </value>
                <value>
                    <fullName>TPA-Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Medical_Funding_Type__c</fullName>
        <label>Current Medical Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>ABF</fullName>
                </value>
                <value>
                    <fullName>ASO Only</fullName>
                </value>
                <value>
                    <fullName>ASO w/Stop Loss</fullName>
                </value>
                <value>
                    <fullName>JAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Op_Gain__c</fullName>
        <label>Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_of_Guarantee__c</fullName>
        <inlineHelpText>What year of the guarantee are we in?</inlineHelpText>
        <label>Current Year of Guarantee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_of_Base_Expense_Covered__c</fullName>
        <inlineHelpText>Copy from SFDC tab of Retention Model</inlineHelpText>
        <label>Current % of Base Expense Covered</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_of_Total_Expense_Covered__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Current % of Total Expense Covered</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Custom_Bluecard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box if quoting Custom Bluecard. Do not check if quoting standard.</description>
        <inlineHelpText>Check the box if quoting Custom Bluecard. Do not check if quoting standard.</inlineHelpText>
        <label>Custom Bluecard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_all_information_received_from_sales__c</fullName>
        <description>Enter the date that all of the information needed to quote was received from sales.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date that all of the information needed to quote was received from sales.</inlineHelpText>
        <label>Date all information received from sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_proposal_released_to_sales__c</fullName>
        <description>Enter the date that the proposal was delivered to sales.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date that the proposal was delivered to sales.</inlineHelpText>
        <label>Date proposal released to sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Annual_Revenue__c</fullName>
        <label>Demo Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dental_Fee__c</fullName>
        <label>Dental Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Health_Engagement_Cur_Exp__c</fullName>
        <label>Digital Health Engagement Cur Exp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Health_Engagement_Cur_Op_Gain__c</fullName>
        <formula>Digital_Health_Engagement_Cur_Rev__c  -  Digital_Health_Engagement_Cur_Exp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Health Engagement Cur Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Health_Engagement_Cur_Rev__c</fullName>
        <label>Digital Health Engagement Cur Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Health_Engagement_Sold_Exp__c</fullName>
        <label>Digital Health Engagement Sold Exp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>